--- a/web/themes/custom/shush/sass/pages/_client-management.scss
+++ b/web/themes/custom/shush/sass/pages/_client-management.scss
@@ -256,6 +256,16 @@ body {
           content: "";
           transform: translateX(-10px);
           transition: all 0.3s ease-in-out;
+          border-radius: 50%;
+          position: absolute;
+          top: 4px;
+          left: 0;
+          width: 12px;
+          height: 12px;
+          background-color: white;
+          transition: all 0.3s ease-in-out;
+          z-index: 10;
+          opacity: 0;
         }
       }
 
@@ -266,7 +276,7 @@ body {
         position: absolute;
         &:checked + label {
           &::before {
-            transform: translateX(10px);
+            transform: translateX(15px);
             border-radius: 50%;
             content: "";
             position: absolute;
@@ -277,6 +287,11 @@ body {
             background-color: white;
             transition: all 0.3s ease-in-out;
             z-index: 10;
+            opacity: 1;
+          }
+          &::after {
+            content: "";
+            background-color: #06b487;
           }
         }
       }
